compiler/lyra/src/test/resources/semantic_errors/ImportedBadFile.ly
class A {
    def m {
        Int x = "ERROR";
    }
}